Fix spacing

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -9,13 +9,13 @@
   padding-left: $gap-100;
   padding-right: $gap-100;
   padding-top: $gap-100;
-  padding-bottom: $gap-100;
 
   @include mobile {
     clip-path: polygon(0 4%, 100% 0, 100% 96%, 0 100%);
     padding-left: $gap-150;
     padding-right: $gap-150;
     padding-top: $gap-200;
+    padding-bottom: $gap-150;
   }
 
   @include tablet {
